--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
-    <!-- Шапка -->
     <header class="header">
         <div class="container header__section">
             <nav class="header__nav">
@@ -49,21 +50,54 @@
                         +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button class="menu-open" data-menu-open>
+                <svg class="menu-burger" width="24" height="16">
+                    <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
+        </div>
+        <div class="mob-menu flex is-hidden" data-menu>
+            <div>
+                <button class="menu-close" data-menu-close>
+                    <svg class="menu-close" width="40" height="40">
+                        <use href="./images/icons.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <ul class="mob-menu-list list">
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link mob-menu-list__link--current" href="./index.html">Студия</a>
+                    </li>
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link" href="">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mob-menu-list__down">
+                <a class="mob-menu-list__tell link" href="tel:+380961111111">
+                    +38 096 111 11 11</a>
+                <a class="mob-menu-list__mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <ul class="mob-menu-list__social list">
+                    <li class="mob-menu-list__social-item">Instagram</li>
+                    <li class="mob-menu-list__social-item">Twitter</li>
+                    <li class="mob-menu-list__social-item">Facebook</li>
+                    <li class="mob-menu-list__social-item">LinkedIn</li>
+                </ul>
+            </div>
         </div>
     </header>
-    <!-- Основной контент -->
+
     <main>
-        <!-- Герой -->
         <section class="hero">
             <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero__btn" type="button" data-modal-open>Заказать услугу</button>
         </section>
-        <!-- Список преимуществ -->
         <section class="features">
             <div class="container">
-                <!-- h2 Преимущества спрятать в css правильно -->
                 <h2 class="visually-hidden">Преимущества</h2>
-                <ul class="features-list list">
+                <ul class="features-list features-flex list">
                     <li class="features-list__item">
                         <div class="features-list__icon-fon">
                             <svg class="features-list__icon" width="70" height="70">
@@ -119,34 +153,43 @@
                 </ul>
             </div>
         </section>
-        <!-- Список занятий -->
         <section class="work">
             <div class="container">
                 <h2 class="work__title section-title">Чем мы занимаемся</h2>
                 <ul class="work-list list">
                     <li class="work-list__item">
-                        <img src="./images/box1.jpg" alt="сотрудник создает программу" width="370" height="294" />
+                        <img srcset="
+                  ./images/skills/img.jpg 1x,                   
+                  ./images/skills/img-2x.jpg 2x
+                  " src="./images/skills/img.jpg" alt="фото ноутбука" width="370" />
                         <p class="work-list__text">Десктопные приложения</p>
                     </li>
                     <li class="work-list__item">
-                        <img src="./images/box2.jpg" alt="сотрудник создает мобильное приложение" width="370"
-                            height="294" />
+                        <img srcset="
+                  ./images/skills/box.jpg 1x,                   
+                  ./images/skills/box-2x.jpg 2x
+                  " src="./images/skills/box.jpg" alt="фото мобильного" width="370" />
                         <p class="work-list__text">Мобильные приложения</p>
                     </li>
                     <li class="work-list__item">
-                        <img src="./images/box3.jpg" alt="веб-дизайнер выбирает палитру" width="370" height="294" />
+                        <img srcset="
+                  ./images/skills/tv.jpg 1x,                   
+                  ./images/skills/tv-2x.jpg 2x
+                  " src="./images/skills/tv.jpg" alt="фото планшета" width="370" />
                         <p class="work-list__text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- Команда -->
         <section class="team">
             <div class="container">
                 <h2 class="team__title section-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list__item">
-                        <img src="./images/img1.jpg" alt="фото Игоря Демьяненко" width="270" height="260" />
+                        <img class="photo thumb-team" srcset="
+                    ./images/mobile-product-designer.jpg 1x,                   
+                    ./images/mobile-product-designer-2x.jpg 2x
+                  " src="./images/mobile-product-designer.jpg" alt="фото Игоря Демьяненко" width="450" />
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Игорь Демьяненко</h3>
                             <p class="team-list__profession" lang="en">Product Designer</p>
@@ -187,7 +230,10 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./images/img2.jpg" alt="фото Ольги Репиной" width="270" height="260" />
+                        <img class="photo thumb-team" srcset="
+                    ./images/mobile-frontend-developer.jpg 1x,                   
+                    ./images/mobile-frontend-developer-2x.jpg 2x
+                  " src="./images/mobile-frontend-developer.jpg" alt="фото Ольга Репина" width="450" />
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Ольга Репина</h3>
                             <p class="team-list__profession" lang="en">Frontend Developer</p>
@@ -227,7 +273,10 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <img src="./images/img3.jpg" alt="фото Николая Тарасова" width="270" height="260" />
+                        <img class="photo thumb-team" srcset="
+                    ./images/mobile-marketing.jpg 1x,                   
+                    ./images/mobile-marketing-2x.jpg 2x
+                  " src="./images/mobile-marketing.jpg" alt="фото Николай Тарасов" width="450" />
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Николай Тарасов</h3>
                             <p class="team-list__profession" lang="en">Marketing</p>
@@ -267,7 +316,10 @@
                         </div>
                     </li>
                     <li class="team-list__item">
-                        <img src="./images/img4.jpg" alt="фото Михаила Ермакова" width="270" height="260" />
+                        <img class="photo thumb-team" srcset="
+                    ./images/mobile-ui-designer.jpg 1x,                   
+                    ./images/mobile-ui-designer-2x.jpg 2x
+                  " src="./images/mobile-ui-designer.jpg" alt="фото Михаил Ермаков" width="450" />
                         <div class="team-list__workers">
                             <h3 class="team-list__worker">Михаил Ермаков</h3>
                             <p class="team-list__profession" lang="en">UI Designer</p>
@@ -309,7 +361,6 @@
                 </ul>
             </div>
         </section>
-        <!-- Клиенты -->
         <section class="client">
             <div class="container">
                 <h2 class="client__title">Постоянные клиенты</h2>
@@ -365,15 +416,14 @@
             </div>
         </section>
     </main>
-    <!-- Подвал -->
     <footer class="footer">
         <div class="container">
             <div class="footer__flex">
+
                 <div class="footer__contacts-flex">
                     <a class="footer__logo logo link" href="./index.html">Web<span
                             class="footer__logo--white">Studio</span>
                     </a>
-                    <!-- Список контактов -->
                     <address class="footer-contact">
                         <ul class="footer-contact__list list">
                             <li class="footer-contact__item">
@@ -439,6 +489,7 @@
             </div>
         </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-btn" data-modal-close>
@@ -490,6 +541,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
