--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,11 @@
     <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -26,7 +28,7 @@
                         <a class="nav__link link" href="./index.html">Студия</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link link nav__link--current link" href="./portfolio.html">Портфолио</a>
+                        <a class="nav__link link nav__link--current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link link" href="">Контакты</a>
@@ -49,6 +51,43 @@
                         +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button class="menu-open" data-menu-open>
+                <svg class="menu-burger" width="24" height="16">
+                    <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
+        </div>
+        <div class="mob-menu flex is-hidden" data-menu>
+            <div>
+                <button class="menu-close" data-menu-close>
+                    <svg class="menu-close" width="40" height="40">
+                        <use href="./images/icons.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <ul class="mob-menu-list list">
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link " href="./index.html">Студия</a>
+                    </li>
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link mob-menu-list__link--current"
+                            href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="mob-menu-list__item">
+                        <a class="mob-menu-list__link link" href="">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mob-menu-list__down">
+                <a class="mob-menu-list__tell link" href="tel:+380961111111">
+                    +38 096 111 11 11</a>
+                <a class="mob-menu-list__mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <ul class="mob-menu-list__social list">
+                    <li class="mob-menu-list__social-item">Instagram</li>
+                    <li class="mob-menu-list__social-item">Twitter</li>
+                    <li class="mob-menu-list__social-item">Facebook</li>
+                    <li class="mob-menu-list__social-item">LinkedIn</li>
+                </ul>
+            </div>
         </div>
     </header>
     <!-- Основной контент -->
@@ -78,12 +117,14 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/tehno.jpg" alt="открытый ноутбук с сайтом Технокряк" width="370"
-                                height="294" />
+                            <img srcset="
+                    ./images/our-people.jpg 1x,                   
+                    ./images/our-people-2x.jpg 2x
+                  " src="./images/our-people.jpg" alt="фото сотрудников" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -93,11 +134,14 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/poster.jpg" alt="парни играют в баскетбол" width="370" height="294" />
+                            <img srcset="
+                    ./images/ball.jpg 1x,                   
+                    ./images/ball-2x.jpg 2x
+                  " src="./images/ball.jpg" alt="парни играют в баскетбол" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -110,12 +154,15 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/seafood.jpg" alt="логотип ресторана Seafood" width="370" height="294" />
+                            <img srcset="
+                    ./images/seafood.jpg 1x,                   
+                    ./images/seafood-2x.jpg 2x
+                  " src="./images/seafood.jpg" alt="ресторан морепродуктов" width="450" />
                             <div class="portfolio-overlay">
 
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -126,11 +173,14 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/prime.jpg" alt="наушники" width="370" height="294" />
+                            <img srcset="
+                    ./images/headphone.jpg 1x,                   
+                    ./images/headphone-2x.jpg 2x
+                  " src="./images/headphone.jpg" alt="наушники" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -141,11 +191,14 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/boxes.jpg" alt="две коробки" width="370" height="294" />
+                            <img srcset="
+                    ./images/2-box.jpg 1x,                   
+                    ./images/2-box-2x.jpg 2x
+                  " src="./images/2-box.jpg" alt="две коробки" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -156,11 +209,14 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/monitor.jpg" alt="компьютерный монитор" width="370" height="294" />
+                            <img srcset="
+                    ./images/screen.jpg 1x,                   
+                    ./images/screen-2x.jpg 2x
+                  " src="./images/screen.jpg" alt="экран" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -171,11 +227,14 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/limited.jpg" alt="открытый журнал" width="370" height="294" />
+                            <img srcset="
+                    ./images/book.jpg 1x,                   
+                    ./images/book-2x.jpg 2x
+                  " src="./images/book.jpg" alt="книга" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -186,11 +245,14 @@
 
                     <li class="portfolio-item">
                         <div class="portfolio-description">
-                            <img src="./images/lab.jpg" alt="этикетка LAB" width="370" height="294" />
+                            <img srcset="
+                    ./images/label.jpg 1x,                   
+                    ./images/label-2x.jpg 2x
+                  " src="./images/label.jpg" alt="бирка для чемодана" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -201,12 +263,14 @@
 
                     <li class="portfolio-item border">
                         <div class="portfolio-description">
-                            <img src="./images/growing.jpg" alt="человек работает на макбуке" width="370"
-                                height="294" />
+                            <img srcset="
+                    ./images/leptop.jpg 1x,                   
+                    ./images/leptop-2x.jpg 2x
+                  " src="./images/leptop.jpg" alt="ноутбук" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
-                                функционала и сервисов. Все это позволит посетителю получить
-                                исчерпывающие сведения о компании или частном лице.</p>
+                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
+                                    защищённые сервера конкурентов.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -218,7 +282,7 @@
             </div>
         </section>
     </main>
-    <!-- Подвал -->
+
     <footer class="footer">
         <div class="container">
             <div class="footer__flex">
@@ -226,7 +290,7 @@
                     <a class="footer__logo logo link" href="./index.html">Web<span
                             class="footer__logo--white">Studio</span>
                     </a>
-                    <!-- Список контактов -->
+
                     <address class="footer-contact">
                         <ul class="footer-contact__list list">
                             <li class="footer-contact__item">
@@ -292,6 +356,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
