--- a/portfolio.html
+++ b/portfolio.html
@@ -122,9 +122,9 @@
                     ./images/our-people-2x.jpg 2x
                   " src="./images/our-people.jpg" alt="фото сотрудников" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -139,9 +139,9 @@
                     ./images/ball-2x.jpg 2x
                   " src="./images/ball.jpg" alt="парни играют в баскетбол" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -160,9 +160,9 @@
                   " src="./images/seafood.jpg" alt="ресторан морепродуктов" width="450" />
                             <div class="portfolio-overlay">
 
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -178,9 +178,9 @@
                     ./images/headphone-2x.jpg 2x
                   " src="./images/headphone.jpg" alt="наушники" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -196,9 +196,9 @@
                     ./images/2-box-2x.jpg 2x
                   " src="./images/2-box.jpg" alt="две коробки" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -214,9 +214,9 @@
                     ./images/screen-2x.jpg 2x
                   " src="./images/screen.jpg" alt="экран" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -232,9 +232,9 @@
                     ./images/book-2x.jpg 2x
                   " src="./images/book.jpg" alt="книга" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -250,9 +250,9 @@
                     ./images/label-2x.jpg 2x
                   " src="./images/label.jpg" alt="бирка для чемодана" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
@@ -268,9 +268,9 @@
                     ./images/leptop-2x.jpg 2x
                   " src="./images/leptop.jpg" alt="ноутбук" width="450" />
                             <div class="portfolio-overlay">
-                                <p class="portfolio-description-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
-                                    защищённые сервера конкурентов.</p>
+                                <p class="portfolio-description-text">Ресурс предлагает комплексные предложения с разным уровнем
+                                функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
                             </div>
                         </div>
                         <div class="portfolio-border">
